[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net-benchmark"
version = "0.5.0"
description = "Network benchmarking suite for DNS, HTTP, and SSL — with DNSSEC validation, DoH/DoT support, high‑concurrency testing, and enterprise‑grade reporting."
readme = { file = "README-pypi.md", content-type = "text/markdown" }
authors = [
    { name = "Joseph Oseh Frank", email = "frank@osehfrank.com" }
]
maintainers = [
    { name = "Joseph Oseh Frank" }
] 
license = { text = "MIT" }
requires-python = ">=3.9,<3.13"
keywords = [
    "dns", "benchmark", "performance", "dnssec", "doh", "dot",
    "networking", "latency", "resolver", "metrics",
    "http", "ssl", "tls", "certificate", "network-analysis",
    "dns-over-https", "dns-over-tls", "cli", "monitoring"
]
dependencies = [
    "httpx[http2]>=0.28.1,<0.29",
    "dnspython>=2.7,<3.0",       
    "pandas>=2.0,<3.0",       
    "click>=8.0,<9.0",           
    "pyfiglet>=1.0,<2.0",        
    "colorama>=0.4,<1.0",        
    "Jinja2>=3.1,<4.0",          
    "openpyxl>=3.1,<4.0",        
    "pyyaml>=6.0,<7.0",          
    "tqdm>=4.66,<5.0",           
    "matplotlib>=3.8,<4.0",
    "pillow>=11.0.0,<12.0.0",
    "cryptography>=42.0,<45.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/net-benchmark/net-benchmark"
Documentation = "https://github.com/net-benchmark/net-benchmark#readme"
Source = "https://github.com/net-benchmark/net-benchmark"
Tracker = "https://github.com/net-benchmark/net-benchmark/issues"
Changelog = "https://github.com/net-benchmark/net-benchmark/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pdf = ["weasyprint>=66.0,<67.0"]
websocket = ["aiohttp>=3.8,<4.0"]

dev = [
    "mypy>=1.8,<3.0",
    "black>=24.0,<26.0",
    "flake8>=7.0,<8.0",
    "autopep8>=2.0,<3.0",
    "pytest>=8.0,<9.0",
    "coverage>=7.6,<8.0",
    "isort>=5.12,<7.0",
    "pytest-asyncio>=0.23,<2.0",
    "commitizen>=3.0,<5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
net_benchmark = [
    "dns_benchmark/data/*.json", 
    "dns_benchmark/data/*.txt", 
    "dns_benchmark/data/*.yaml"
]

[project.scripts]
net-benchmark = "net_benchmark.cli:cli"
dns-benchmark = "net_benchmark.dns_benchmark.cli:cli"  # backward compat

# -------------------
# Tool configurations
# -------------------

[tool.flake8]
exclude = [".venv", ".eggs", "*.egg", "tests/*"]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
strict = true

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-ra -q"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/net_benchmark/__init__.py:__version__"
]
